crates/plotnik-tests/tests/04-emit/bytecode/binding/field_not_on_node.txt
Q = (function_declaration
  condition: (identifier) @name
) @fn
------------------ DIAGNOSTICS -------------------
error: field `condition` is not valid on this node kind
 --> query.ptk:2:3
  |
1 | Q = (function_declaration
  |      -------------------- on `function_declaration`
2 |   condition: (identifier) @name
  |   ^^^^^^^^^
  |
help: valid fields for `function_declaration`: `body`, `name`, `parameters`
